# bioacoustic-vamp-pack

./: .gitignore  CMakeLists.txt  README.md  manual_from_plugin_wav.json
.github/workflows/: build.yml
birdnet_plugin/: birdnet_run.py
perch_plugin/: PerchPlugin.cpp  PerchPlugin.h  perch_run.py
